# HipMer

./: .gitignore  CMakeLists.txt  LEGAL.txt  LICENSE.txt  README.md  buildRelease.sh  install.sh
.cori_deploy/: env-crayupc.sh  env-debug.sh  env-gnu.sh  env.sh  module_dependencies  run_hipmer-cori.sh  test_hipmer_chr14-cori.sh  test_hipmer_ecoli-cori.sh  test_hipmer_ecoli-diploid-cori.sh  test_hipmer_human-cori.sh  test_hipmer_human25pct-cori.sh  test_hipmer_validation-cori.sh
.edison_deploy/: env-crayupc.sh  env-debug.sh  env-gnu.sh  env.sh  hagfish-edison.sh  run_hipmer-edison.sh  run_hipmer_shm-edison.sh  test_hipmer_chr14-edison-shm.sh  test_hipmer_chr14-edison.sh  test_hipmer_ecoli-diploid-edison.sh  test_hipmer_ecoli-edison-shm.sh  test_hipmer_ecoli-edison.sh  test_hipmer_ecoli-hll-heavyhitters-edison.sh  test_hipmer_human-edison-shm.sh  test_hipmer_human-edison.sh  test_hipmer_human25pct-edison.sh  test_hipmer_validation-edison.sh
.genepool_deploy/: env-debug.sh  env-no-mpi.sh  env-noupc.sh  env-smp.sh  env-upc-mpi.sh  env.sh  module_dependencies  run_hipmer-genepool.sh  test_hipmer_chr14-genepool-shm.sh  test_hipmer_chr14-genepool.sh  test_hipmer_ecoli-diploid-genepool.sh  test_hipmer_ecoli-genepool.sh  test_hipmer_validation-genepool.sh
.generic_deploy/: build-all.sh  env-debug.sh  env.sh  test_hipmer_chr14-generic-shm.sh  test_hipmer_chr14-generic.sh  test_hipmer_ecoli-diploid-generic.sh  test_hipmer_ecoli-generic-shm.sh  test_hipmer_ecoli-generic.sh  test_hipmer_stapha-generic.sh  test_hipmer_validation-generic.sh
.hopper_deploy/: env-debug.sh  env.sh  install.sh  run_hipmer-hopper.sh  test_hipmer_chr14-hopper.sh  test_hipmer_ecoli-diploid-hopper.sh  test_hipmer_ecoli-hopper.sh  test_hipmer_human-hopper.sh  test_hipmer_human25pct-hopper.sh  test_hipmer_validation-hopper.sh
.lawrencium_deploy/: build.sh  env-debug.sh  env.sh  module_dependencies  test.sh  test_hipmer_ecoli-diploid-lawrencium.sh  test_hipmer_ecoli-lawrencium.sh  test_hipmer_validation-lawrencium.sh
cmake/Modules/: CMakeDetermineUPCCompiler.cmake  CMakeTestUPCCompiler.cmake  CMakeUPCCompiler.cmake.in  CMakeUPCInformation.cmake  CheckLanguage2.cmake
cmake/Modules/Compiler/: BUPC-UPC.cmake  CrayUPC-UPC.cmake
config/: meraculous.local.params.defs  meraculous.params.defs
doc/: hipmer.config.template
src/hipmer/: CMakeLists.txt  compare_results.sh  get_diagnostics.sh  get_stage_timings.sh  rerun_single_stage.sh  rerun_stage.sh  run_hipmer.sh
src/hipmer/common/: Buffer.c  Buffer.h  CMakeLists.txt  colors.h  common.h  findDMin.h  hash_funcs.c  kseq.h  optlist.c  optlist.h  upc_compatibility.h  version.h.in
src/hipmer/contigs/: .gitignore  CMakeLists.txt  UU_traversal_final.h  buildUFXhashBinary.h  kmer_handling.h  kmer_hash.h  meraculous.c  meraculous.h
src/hipmer/fqreader/: CMakeLists.txt  fq_reader.c  fq_reader.h  fq_reader_mpi.cpp  fq_reader_upc.c
src/hipmer/gapclosing/: .gitignore  CMakeLists.txt  Makefile  Makefile.edison  README  avg.py  canonical_assembly.c  check-output.sh  config.c  config.h  dhtable.c  dhtable.h  fasta_stats  gaps.c  gaps.h  gp-run.sh  htable.c  htable.h  load_meraligner_files.c  merauder4.c  pl-mer-run.sh  timers.c  timers.h  tracing.c  tracing.h  upc-mer-run.sh  utils.c  utils.h
src/hipmer/gapclosing/pbs-scripts/: gappc-human.pbs
src/hipmer/kmercount/: CMakeLists.txt  Friends.h  FriendsMPI.h  HipMERdefines.h  Kmer.cpp  Kmer.hpp  KmerMiddle.cpp  KmerMiddle.hpp  MPIFileBuffer.c  MPIFileBuffer.h  MPIUtils.h  Pack.h  ParallelFASTQ.h  README  SNPFunctions.h  SNPidentify.cpp  SimpleCount.h  UFXextended.cpp  bin2textCount.cpp  bin2textUFX.cpp  khash.hh  readufx.cpp  readufx.h  ufxdriver.c  unlinker.cpp
src/hipmer/kmercount/DataStructures/: hyperloglog.hpp
src/hipmer/kmercount/DataStructures/libbloom/: CMakeLists.txt  bloom64.c  bloom64.h
src/hipmer/loadfq/: CMakeLists.txt  loadfq.c  unloadfq.c
src/hipmer/meracUsedForParallelization/: bmaToLinks.pl  bubbleFinder.pl  buildUFXhash.pl  contigEndAnalyzerH.pl  contigMerDepthb.pl  gapPlacer.pl  merCounterSb.pl  meraculous4h.pl  merauder4.pl  oNo4.pl  spanner.pl  splinter.pl
src/hipmer/meraligner/: CMakeLists.txt  aligningPhase.h  buildSeedIndex.h  cache_infrastructure.h  contigDB.h  fasta.c  fasta.h  kmer_hash2.h  merAligner.c  merAligner.h  packingDNAseq2.h  splitter.c  ssw.h
src/hipmer/scaffolding/: CMakeLists.txt
src/hipmer/scaffolding/bmaToLinks/: CMakeLists.txt  bmaToLinks.c  bmaToLinksUtils.h  bma_meta.h  gapSizeEstimatesUtils.h  linkHash.h
src/hipmer/scaffolding/bubbleFinder/: CMakeLists.txt  bubbleFinder.c  bubbleFinder.h  bubbleHash.h
src/hipmer/scaffolding/contigEndAnalyzer/: CMakeLists.txt  contigEndAnalyzer.c
src/hipmer/scaffolding/histogrammer/: CMakeLists.txt  analyzerUtils.h  locationHash.h  merAlignerAnalyzer.c
src/hipmer/scaffolding/merDepth/: CMakeLists.txt  contigMerDepth.c
src/hipmer/scaffolding/merger/: CMakeLists.txt  merge_ono_inputs.sh  merger.c  srfSplitter.c
src/hipmer/scaffolding/oNo/: CMakeLists.txt  n50fromSRF.c  oNo.c  oNoHash.h  oNoUtils.h
src/hipmer/scaffolding/spanner/: CMakeLists.txt  spanner.c  spannerUtils.h
src/hipmer/scaffolding/splinter/: CMakeLists.txt  splinter.c  splinter.pl  splinterUtils.h
src/perl/: N50.pl  blastMapAnalyzer2.pl  canonical_assembly.pl  findDMin2.pl  histogram2.pl
test/hipmer/: check_ecoli_results.sh  check_results.sh  check_validation_results.sh  hipmer_setup_chr14_data.sh  hipmer_setup_ecoli_data.sh  hipmer_setup_human_data.sh  hipmer_setup_human_subsets_data.sh  hipmer_setup_validation_data.sh  run_hipmer_validation.sh
test/pipeline/: meraculous-chr14.config  meraculous-ecoli-diploid.config  meraculous-ecoli.config  meraculous-hagfish.config  meraculous-human.config  meraculous-human25pct.config  meraculous-stapha.config  meraculous-validation.config
