ADD_LIBRARY(Buffer OBJECT Buffer.c)

ADD_DEFINITIONS(-DUSE_UPC_FOR_COMMON -DCONFIG_USE_COLORS)
SET_SOURCE_FILES_PROPERTIES(common.h OBJECT DEPENDS version.h)
SET_SOURCE_FILES_PROPERTIES(version.h OBJECT DEPENDS REPLACE_VERSION_H)

SET(UPC_COMMON_CODE optlist.c hash_funcs.c)
SET_SOURCE_FILES_PROPERTIES(${UPC_COMMON_CODE} PROPERTIES LANGUAGE "UPC" )
ADD_LIBRARY(upc_common OBJECT ${UPC_COMMON_CODE})
ADD_DEPENDENCIES(upc_common REPLACE_VERSION_H)

