SET(CMAKE_UPC_FLAGS "${CMAKE_UPC_FLAGS} -Wc,-Wall -Wc,-Wno-unused-function -Wc,-Wno-unused-value -Wc,-Wno-unused-label")

MESSAGE("Building gapclosing ${CMAKE_BUILD_TYPE} UPC code using '${CMAKE_UPC_COMPILER} ${CMAKE_UPC_FLAGS}' to compile UPC code")

SET(CMAKE_EXE_LINKER_FLAGS)

# fix linking when objects are from multiple languages
set(CMAKE_C_IMPLICIT_LINK_LIBRARIES "")
set(CMAKE_C_IMPLICIT_LINK_DIRECTORIES "")
set(CMAKE_CXX_IMPLICIT_LINK_LIBRARIES "stdc++")
set(CMAKE_CXX_IMPLICIT_LINK_DIRECTORIES "")

ADD_DEFINITIONS(-DUSE_UPC_FOR_COMMON)

SET(SHM_FILES timers.c tracing.c utils.c)
SET(GC_FILES htable.c config.c gaps.c dhtable.c)

SET(UPC_CODE utils.c tracing.c timers.c htable.c config.c gaps.c merauder4.c load_meraligner_files.c canonical_assembly.c dhtable.c)
SET_SOURCE_FILES_PROPERTIES(${UPC_CODE} PROPERTIES LANGUAGE "UPC" )

ADD_LIBRARY(GC_OBJS OBJECT ${GC_FILES})
ADD_LIBRARY(SHM_OBJS OBJECT ${SHM_FILES})

SET_SOURCE_FILES_PROPERTIES(${UPC_CODE} PROPERTIES OBJECT_DEPENDS "${CMAKE_SOURCE_DIR}/src/hipmer/common/common.h")
SET_SOURCE_FILES_PROPERTIES(${UPC_CODE} PROPERTIES OBJECT_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/utils.h")
SET_SOURCE_FILES_PROPERTIES(${UPC_CODE} PROPERTIES OBJECT_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/timers.h")
SET_SOURCE_FILES_PROPERTIES(${UPC_CODE} PROPERTIES OBJECT_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/tracing.h")

SET_SOURCE_FILES_PROPERTIES(gaps.c merauder4.c PROPERTIES OBJECT_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/gaps.h")
SET_SOURCE_FILES_PROPERTIES(htable.c gaps.c merauder4.c PROPERTIES OBJECT_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/htable.h")
SET_SOURCE_FILES_PROPERTIES(config.c gaps.c merauder4.c PROPERTIES OBJECT_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/config.h")
SET_SOURCE_FILES_PROPERTIES(gaps.c PROPERTIES OBJECT_DEPENDS "${CMAKE_SOURCE_DIR}/src/hipmer/fqreader/fq_reader.h")
SET_SOURCE_FILES_PROPERTIES(gaps.c dhtable.c PROPERTIES OBJECT_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/dhtable.h")

ADD_EXECUTABLE(gapclosing merauder4.c $<TARGET_OBJECTS:UPC_FQ_OBJS> $<TARGET_OBJECTS:GC_OBJS> 
    $<TARGET_OBJECTS:SHM_OBJS> $<TARGET_OBJECTS:upc_common> $<TARGET_OBJECTS:Buffer> )
SET_TARGET_PROPERTIES(gapclosing PROPERTIES LINKER_LANGUAGE "UPC")
ADD_DEPENDENCIES(gapclosing REPLACE_VERSION_H)
TARGET_LINK_LIBRARIES(gapclosing z)
INSTALL(TARGETS gapclosing  DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ )

ADD_EXECUTABLE(upc-canonical-assembly canonical_assembly.c $<TARGET_OBJECTS:SHM_OBJS> $<TARGET_OBJECTS:upc_common>)
SET_TARGET_PROPERTIES(upc-canonical-assembly PROPERTIES LINKER_LANGUAGE "UPC")
ADD_DEPENDENCIES(upc-canonical-assembly REPLACE_VERSION_H)
TARGET_LINK_LIBRARIES(upc-canonical-assembly z)
INSTALL(TARGETS upc-canonical-assembly DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ )

#ADD_EXECUTABLE(load_meraligner_files load_meraligner_files.c $<TARGET_OBJECTS:SHM_OBJS> $<TARGET_OBJECTS:upc_common> )
#SET_TARGET_PROPERTIES(load_meraligner_files PROPERTIES LINKER_LANGUAGE "UPC")
#INSTALL(TARGETS load_meraligner_files  DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ )

