SET(CMAKE_UPC_FLAGS "${CMAKE_UPC_FLAGS} -Wc,-Wall -Wc,-Wno-unused-function -Wc,-Wno-unused-value -Wc,-Wno-unused-label")

MESSAGE("Building loadfq ${CMAKE_BUILD_TYPE} UPC code using '${CMAKE_UPC_COMPILER} ${CMAKE_UPC_FLAGS}' to compile UPC code")

SET(CMAKE_EXE_LINKER_FLAGS)

# fix linking when objects are from multiple languages
set(CMAKE_C_IMPLICIT_LINK_LIBRARIES "")
set(CMAKE_C_IMPLICIT_LINK_DIRECTORIES "")
set(CMAKE_CXX_IMPLICIT_LINK_LIBRARIES "stdc++")
set(CMAKE_CXX_IMPLICIT_LINK_DIRECTORIES "")

ADD_DEFINITIONS(-DCONFIG_USE_COLORS)
ADD_DEFINITIONS(-DCONFIG_SHOW_PROGRESS)
ADD_DEFINITIONS(-DUSE_UPC_FOR_COMMON)

SET(UPC_CODE loadfq.c unloadfq.c)
SET_SOURCE_FILES_PROPERTIES(${UPC_CODE} PROPERTIES LANGUAGE "UPC" OBJECT_DEPENDS "${CMAKE_SOURCE_DIR}/src/hipmer/common/common.h")

SET_SOURCE_FILES_PROPERTIES(${UPC_CODE} PROPERTIES OBJECT_DEPENDS "${CMAKE_SOURCE_DIR}/src/hipmer/common/common.h")
SET_SOURCE_FILES_PROPERTIES(${UPC_CODE} PROPERTIES OBJECT_DEPENDS "${CMAKE_SOURCE_DIR}/src/hipmer/fqreader/fq_reader.h")
SET_SOURCE_FILES_PROPERTIES(${UPC_CODE} PROPERTIES OBJECT_DEPENDS "${CMAKE_SOURCE_DIR}/src/hipmer/fqreader/fq_reader.c")

ADD_EXECUTABLE(loadfq loadfq.c $<TARGET_OBJECTS:UPC_FQ_OBJS> $<TARGET_OBJECTS:upc_common> $<TARGET_OBJECTS:Buffer> )
SET_TARGET_PROPERTIES(loadfq PROPERTIES LINKER_LANGUAGE "UPC")
ADD_DEPENDENCIES(loadfq REPLACE_VERSION_H)
INSTALL(TARGETS loadfq  DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ )

ADD_EXECUTABLE(unloadfq unloadfq.c $<TARGET_OBJECTS:UPC_FQ_OBJS> $<TARGET_OBJECTS:upc_common> $<TARGET_OBJECTS:Buffer> )
SET_TARGET_PROPERTIES(unloadfq PROPERTIES LINKER_LANGUAGE "UPC")
ADD_DEPENDENCIES(unloadfq REPLACE_VERSION_H)
INSTALL(TARGETS unloadfq  DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ )


