SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wshadow -Wreturn-type")
SET(CMAKE_EXE_LINKER_FLAGS)

#INCLUDE_DIRECTORIES(../upc-contigs)
#INCLUDE_DIRECTORIES(.)

# fix linking when objects are from multiple languages
set(CMAKE_C_IMPLICIT_LINK_LIBRARIES "")
set(CMAKE_C_IMPLICIT_LINK_DIRECTORIES "")
set(CMAKE_CXX_IMPLICIT_LINK_LIBRARIES "stdc++")
set(CMAKE_CXX_IMPLICIT_LINK_DIRECTORIES "")

ADD_SUBDIRECTORY(bmaToLinks)
ADD_SUBDIRECTORY(bubbleFinder)
ADD_SUBDIRECTORY(contigEndAnalyzer)
ADD_SUBDIRECTORY(histogrammer)
ADD_SUBDIRECTORY(merDepth)
ADD_SUBDIRECTORY(oNo)
ADD_SUBDIRECTORY(spanner)
ADD_SUBDIRECTORY(splinter)
ADD_SUBDIRECTORY(merger)
