MESSAGE("Building bmaToLinks ${CMAKE_BUILD_TYPE} UPC code using '${CMAKE_UPC_COMPILER} ${CMAKE_UPC_FLAGS}' to compile UPC code")

ADD_DEFINITIONS(-DUSE_UPC_FOR_COMMON)

SET_SOURCE_FILES_PROPERTIES(bmaToLinks.c PROPERTIES LANGUAGE "UPC" OBJECT_DEPENDS "${CMAKE_SOURCE_DIR}/src/hipmer/common/common.h")
ADD_EXECUTABLE(bmaToLinks bmaToLinks.c $<TARGET_OBJECTS:upc_common>)
ADD_DEPENDENCIES(bmaToLinks REPLACE_VERSION_H)
INSTALL(TARGETS bmaToLinks DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ )

