SET(CMAKE_UPC_FLAGS "${CMAKE_UPC_FLAGS} -Wc,-Wno-unused-result")

MESSAGE("Building bubbleFinder ${CMAKE_BUILD_TYPE} UPC code using '${CMAKE_UPC_COMPILER} ${CMAKE_UPC_FLAGS}' to compile UPC code")

SET_SOURCE_FILES_PROPERTIES(bubbleFinder.c PROPERTIES LANGUAGE "UPC" )

ADD_DEFINITIONS(-DUSE_UPC_FOR_COMMON)

FOREACH(HIPMER_KMER_LEN ${HIPMER_KMER_LENGTHS})
    ADD_EXECUTABLE(bubbleFinder-${HIPMER_KMER_LEN} bubbleFinder.c $<TARGET_OBJECTS:upc_common> $<TARGET_OBJECTS:Buffer>)
    SET_TARGET_PROPERTIES(bubbleFinder-${HIPMER_KMER_LEN} PROPERTIES LINKER_LANGUAGE "UPC" OBJECT_DEPENDS "${CMAKE_SOURCE_DIR}/src/hipmer/common/common.h")
    ADD_DEPENDENCIES(bubbleFinder-${HIPMER_KMER_LEN} REPLACE_VERSION_H)
    TARGET_LINK_LIBRARIES(bubbleFinder-${HIPMER_KMER_LEN} z)
    INSTALL(TARGETS bubbleFinder-${HIPMER_KMER_LEN} DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ )
    ADD_KMER_DEFS(bubbleFinder-${HIPMER_KMER_LEN})
ENDFOREACH()
