MESSAGE("Building contigEndAnalyzer ${CMAKE_BUILD_TYPE} UPC code using '${CMAKE_UPC_COMPILER} ${CMAKE_UPC_FLAGS}' to compile UPC code")

ADD_DEFINITIONS(-DCEA)
ADD_DEFINITIONS(-DUSE_UPC_FOR_COMMON)

include_directories(${CMAKE_SOURCE_DIR}/src/hipmer/contigs/)

SET_SOURCE_FILES_PROPERTIES(contigEndAnalyzer.c PROPERTIES LANGUAGE "UPC" )

FOREACH(HIPMER_KMER_LEN ${HIPMER_KMER_LENGTHS})
  ADD_EXECUTABLE(contigEndAnalyzer-${HIPMER_KMER_LEN} contigEndAnalyzer.c 
      $<TARGET_OBJECTS:KmerObjects-${HIPMER_KMER_LEN}> $<TARGET_OBJECTS:readufx-${HIPMER_KMER_LEN}> 
      $<TARGET_OBJECTS:upc_common> $<TARGET_OBJECTS:Buffer>)
  SET_TARGET_PROPERTIES(contigEndAnalyzer-${HIPMER_KMER_LEN} PROPERTIES LINKER_LANGUAGE "UPC" LINK_LIBRARIES "z" OBJECT_DEPENDS "${CMAKE_SOURCE_DIR}/src/hipmer/common/common.h")
  ADD_DEPENDENCIES(contigEndAnalyzer-${HIPMER_KMER_LEN} REPLACE_VERSION_H)
  TARGET_LINK_LIBRARIES(contigEndAnalyzer-${HIPMER_KMER_LEN} z)
  INSTALL(TARGETS contigEndAnalyzer-${HIPMER_KMER_LEN} DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/)
  add_kmer_defs(contigEndAnalyzer-${HIPMER_KMER_LEN})
ENDFOREACH()
