MESSAGE("Building merger and srf_Splitter ${CMAKE_BUILD_TYPE} UPC code using '${CMAKE_UPC_COMPILER} ${CMAKE_UPC_FLAGS}' to compile UPC code")

ADD_DEFINITIONS(-DUSE_UPC_FOR_COMMON)
SET_SOURCE_FILES_PROPERTIES(merger.c PROPERTIES LANGUAGE "UPC" OBJECT_DEPENDS "${CMAKE_SOURCE_DIR}/src/hipmer/common/common.h")
SET_SOURCE_FILES_PROPERTIES(srfSplitter.c PROPERTIES LANGUAGE "UPC" OBJECT_DEPENDS "${CMAKE_SOURCE_DIR}/src/hipmer/common/common.h")
ADD_EXECUTABLE(merger merger.c $<TARGET_OBJECTS:upc_common> )
ADD_EXECUTABLE(splitter srfSplitter.c $<TARGET_OBJECTS:upc_common> )
ADD_DEPENDENCIES(merger REPLACE_VERSION_H)
ADD_DEPENDENCIES(splitter REPLACE_VERSION_H)
INSTALL(TARGETS merger DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ )
INSTALL(TARGETS splitter DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ )
