SET(CMAKE_UPC_FLAGS "${CMAKE_UPC_FLAGS} -Wc,-Wno-unused-result")

MESSAGE("Building oNo ${CMAKE_BUILD_TYPE} UPC code using '${CMAKE_UPC_COMPILER} ${CMAKE_UPC_FLAGS}' to compile UPC code")

ADD_DEFINITIONS(-DUSE_UPC_FOR_COMMON)

SET_SOURCE_FILES_PROPERTIES(oNo.c PROPERTIES LANGUAGE "UPC" OBJECT_DEPENDS "${CMAKE_SOURCE_DIR}/src/hipmer/common/common.h")

ADD_EXECUTABLE(oNo oNo.c $<TARGET_OBJECTS:upc_common> )
INSTALL(TARGETS oNo DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ )

SET_SOURCE_FILES_PROPERTIES(n50fromSRF.c PROPERTIES LANGUAGE "UPC" )
ADD_EXECUTABLE(n50fromSRF n50fromSRF.c $<TARGET_OBJECTS:upc_common> )
ADD_DEPENDENCIES(n50fromSRF REPLACE_VERSION_H)
INSTALL(TARGETS n50fromSRF DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ )

