MESSAGE("Building spanner ${CMAKE_BUILD_TYPE} UPC code using '${CMAKE_UPC_COMPILER} ${CMAKE_UPC_FLAGS}' to compile UPC code")

ADD_DEFINITIONS(-DUSE_UPC_FOR_COMMON)
SET_SOURCE_FILES_PROPERTIES(spanner.c PROPERTIES LANGUAGE "UPC" OBJECT_DEPENDS "${CMAKE_SOURCE_DIR}/src/hipmer/common/common.h" )
ADD_EXECUTABLE(spanner spanner.c $<TARGET_OBJECTS:upc_common> )
ADD_DEPENDENCIES(spanner REPLACE_VERSION_H)
INSTALL(TARGETS spanner DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ )
