MESSAGE("Building splinter ${CMAKE_BUILD_TYPE} UPC code using '${CMAKE_UPC_COMPILER} ${CMAKE_UPC_FLAGS}' to compile UPC code")

ADD_DEFINITIONS(-DUSE_UPC_FOR_COMMON)
SET_SOURCE_FILES_PROPERTIES(splinter.c PROPERTIES LANGUAGE "UPC" OBJECT_DEPENDS "${CMAKE_SOURCE_DIR}/src/hipmer/common/common.h")
ADD_EXECUTABLE(splinter splinter.c $<TARGET_OBJECTS:upc_common> )
ADD_DEPENDENCIES(splinter REPLACE_VERSION_H)
INSTALL(TARGETS splinter DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ )
